--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,5 +21,15 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+  <div class="sidebar-section">
+  <h3>Menu</h3>
+  <ul style="list-style: none; padding-left: 0;">
+    <li><a href="https://yourusername.github.io/">Home</a></li>
+    <li><a href="https://yourusername.github.io/publications/">Publications</a></li>
+    <li><a href="https://yourusername.github.io/talks/">Talks</a></li>
+    <li><a href="https://yourusername.github.io/teaching/">Teaching</a></li>
+    <li><a href="https://yourusername.github.io/cv/">CV</a></li>
+  </ul>
+  </div>
   </div>
 {% endif %}
