--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,8 +27,8 @@
     <li><a href="/"><span class="nav__sub-title">About me</span></a></li>
     <li><a href="/research/"><span class="nav__sub-title">Research</span></a></li>
     <li><a href="/publications/"><span class="nav__sub-title">Publications</span></a></li>
-    %<li><a href="/talks/"><span class="nav__sub-title">Talks</span></a></li>
-    %<li><a href="/teaching/"><span class="nav__sub-title">Teaching</span></a></li>
+    <!-- <li><a href="/talks/"><span class="nav__sub-title">Talks</span></a></li> -->
+    <!-- <li><a href="/teaching/"><span class="nav__sub-title">Teaching</span></a></li> -->
     <li><a href="/cv/"><span class="nav__sub-title">CV</span></a></li>
   </ul>
 </nav>
